Crash when switching to UVEditing or Texture Paint #64329

Closed
opened 2019-05-08 21:22:29 +02:00 by Stefano Bonicatti · 27 comments

System Information
Operating system: ArchLinux
Graphics card: Nvidia GTX 1080

Blender Version
Broken: 2.80, Manual build from today commit c358da6b21
Worked: 2.80, Manual build from yesterday (c041e10c9a)

Short description of error
Blender crashes when switching to the UV Editing tab or Texture Paint tab in default startup.
Another type of crash stack trace is generated opening the file from this issue #63969, and then switching to the Animation tab as soon as possible.

Exact steps for others to reproduce the error
Just open Blender and switch to UV Editing or Texture Paint.

crash_uvedit.txt
crash_texturepaint.txt
crash_T63969.txt

I did not split the bugs because they are probably related, but tell me if you would like them to be filed separately.

**System Information** Operating system: ArchLinux Graphics card: Nvidia GTX 1080 **Blender Version** Broken: 2.80, Manual build from today commit c358da6b21158792bc05fa17fa00440675d0e76e Worked: 2.80, Manual build from yesterday (c041e10c9a94) **Short description of error** Blender crashes when switching to the UV Editing tab or Texture Paint tab in default startup. Another type of crash stack trace is generated opening the file from this issue #63969, and then switching to the Animation tab as soon as possible. **Exact steps for others to reproduce the error** Just open Blender and switch to UV Editing or Texture Paint. [crash_uvedit.txt](https://archive.blender.org/developer/F7018223/crash_uvedit.txt) [crash_texturepaint.txt](https://archive.blender.org/developer/F7018224/crash_texturepaint.txt) [crash_T63969.txt](https://archive.blender.org/developer/F7018225/crash_T63969.txt) I did not split the bugs because they are probably related, but tell me if you would like them to be filed separately.

Added subscriber: @Smjert

Added subscriber: @Smjert

#64401 was marked as duplicate of this issue

#64401 was marked as duplicate of this issue

#64381 was marked as duplicate of this issue

#64381 was marked as duplicate of this issue

#64393 was marked as duplicate of this issue

#64393 was marked as duplicate of this issue

#64378 was marked as duplicate of this issue

#64378 was marked as duplicate of this issue

#64368 was marked as duplicate of this issue

#64368 was marked as duplicate of this issue

#64330 was marked as duplicate of this issue

#64330 was marked as duplicate of this issue

Added subscriber: @leldorado

Added subscriber: @leldorado

I can unwrap but only without the UV editor open. If the UV editor is open unwraping crashes directly. Same for the UV reset. It's probably related. This is with the latest build through the buildbot: May 8, 22:00 (GMT?).
The version two or three days ago worked fine, meaning I could unwrap while having the UV editor open.

I can unwrap but only without the UV editor open. If the UV editor is open unwraping crashes directly. Same for the UV reset. It's probably related. This is with the latest build through the buildbot: May 8, 22:00 (GMT?). The version two or three days ago worked fine, meaning I could unwrap while having the UV editor open.
Member

Added subscribers: @Znio.G, @zanqdo

Added subscribers: @Znio.G, @zanqdo
Clément Foucault was assigned by Brecht Van Lommel 2019-05-09 02:26:49 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

@fclem, in the future, please don't commit big refactorings in the evening when it's too late to fix issues like this before the next nightly build.

@fclem, in the future, please don't commit big refactorings in the evening when it's too late to fix issues like this before the next nightly build.

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

6e33729462 Should fix the UV Editing tab problem.

6e33729462d9 Should fix the UV Editing tab problem.

Seems to fixed it for my problem.

Seems to fixed it for my problem.

I'm using commit f09aead64a and I can confirm that 6e33729462 fixes the UV Editing tab crash and the crash using the blend file from #63969, but switching to Texture Paint tab still crashes:

- 0  texpaint_request_active_uv (cache=cache@entry=0x0, me=me@entry=0x7fffc200e708) at /home/smjert/Development/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4253
- 1  0x00005555567cc77b in DRW_mesh_batch_cache_get_uv_edges (me=me@entry=0x7fffc200e708) at /home/smjert/Development/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4517
- 2  0x0000555557de3dd3 in draw_uvs_texpaint (scene=0x7fffe3eac808, depsgraph=0x7fffde42d108, ob=0x0) at /home/smjert/Development/blender-git/blender/source/blender/editors/uvedit/uvedit_draw.c:232
- 3  ED_uvedit_draw_main (sima=sima@entry=0x7fffde39a008, scene=scene@entry=0x7fffe3eac808, view_layer=view_layer@entry=0x7fffde383ec8, obedit=obedit@entry=0x0, obact=obact@entry=0x7fffde444808, depsgraph=depsgraph@entry=0x7fffde42d108)
    at /home/smjert/Development/blender-git/blender/source/blender/editors/uvedit/uvedit_draw.c:509
- 4  0x0000555556a2d69b in image_main_region_draw (C=0x7fffe3e63208, ar=0x7fffde4e4ac8) at /home/smjert/Development/blender-git/blender/source/blender/editors/space_image/space_image.c:609
- 5  0x0000555556ad6aa1 in ED_region_do_draw (C=C@entry=0x7fffe3e63208, ar=ar@entry=0x7fffde4e4ac8) at /home/smjert/Development/blender-git/blender/source/blender/editors/screen/area.c:567
- 6  0x00005555565c80dc in wm_draw_window_offscreen (stereo=false, win=0x7fffde43d708, C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:596
- 7  wm_draw_window (win=0x7fffde43d708, C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:732
- 8  wm_draw_update (C=C@entry=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:895
- 9  0x00005555565c5808 in WM_main (C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm.c:424
#10 0x00005555561a3d5b in main (argc=1, argv=0x7fffffffe318) at /home/smjert/Development/blender-git/blender/source/creator/creator.c:500

Seems the same crash, just with source lines number updated.

I'm using commit f09aead64a7 and I can confirm that 6e33729462d9 fixes the UV Editing tab crash and the crash using the blend file from #63969, but switching to Texture Paint tab still crashes: ``` - 0 texpaint_request_active_uv (cache=cache@entry=0x0, me=me@entry=0x7fffc200e708) at /home/smjert/Development/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4253 - 1 0x00005555567cc77b in DRW_mesh_batch_cache_get_uv_edges (me=me@entry=0x7fffc200e708) at /home/smjert/Development/blender-git/blender/source/blender/draw/intern/draw_cache_impl_mesh.c:4517 - 2 0x0000555557de3dd3 in draw_uvs_texpaint (scene=0x7fffe3eac808, depsgraph=0x7fffde42d108, ob=0x0) at /home/smjert/Development/blender-git/blender/source/blender/editors/uvedit/uvedit_draw.c:232 - 3 ED_uvedit_draw_main (sima=sima@entry=0x7fffde39a008, scene=scene@entry=0x7fffe3eac808, view_layer=view_layer@entry=0x7fffde383ec8, obedit=obedit@entry=0x0, obact=obact@entry=0x7fffde444808, depsgraph=depsgraph@entry=0x7fffde42d108) at /home/smjert/Development/blender-git/blender/source/blender/editors/uvedit/uvedit_draw.c:509 - 4 0x0000555556a2d69b in image_main_region_draw (C=0x7fffe3e63208, ar=0x7fffde4e4ac8) at /home/smjert/Development/blender-git/blender/source/blender/editors/space_image/space_image.c:609 - 5 0x0000555556ad6aa1 in ED_region_do_draw (C=C@entry=0x7fffe3e63208, ar=ar@entry=0x7fffde4e4ac8) at /home/smjert/Development/blender-git/blender/source/blender/editors/screen/area.c:567 - 6 0x00005555565c80dc in wm_draw_window_offscreen (stereo=false, win=0x7fffde43d708, C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:596 - 7 wm_draw_window (win=0x7fffde43d708, C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:732 - 8 wm_draw_update (C=C@entry=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:895 - 9 0x00005555565c5808 in WM_main (C=0x7fffe3e63208) at /home/smjert/Development/blender-git/blender/source/blender/windowmanager/intern/wm.c:424 #10 0x00005555561a3d5b in main (argc=1, argv=0x7fffffffe318) at /home/smjert/Development/blender-git/blender/source/creator/creator.c:500 ``` Seems the same crash, just with source lines number updated.

Added subscriber: @akerka

Added subscriber: @akerka

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed by 6e33729462.

Fixed by 6e33729462.

Though it still crashes with the latest commit (7c9e649015), switching on Texture Paint.

Though it still crashes with the latest commit (7c9e649015d), switching on Texture Paint.

This issue was referenced by 209c01a6ba

This issue was referenced by 209c01a6ba6468f234a826d1eea38f4341f58cac

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Removed subscriber: @leldorado

Removed subscriber: @leldorado

Added subscriber: @c2ba

Added subscriber: @c2ba

Added subscriber: @Euclid.Skyline

Added subscriber: @Euclid.Skyline

Added subscriber: @DedosThreat

Added subscriber: @DedosThreat
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64329
No description provided.