Fix T64329 Crash when switching to Texture Paint